--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,94 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_margin="16dp"
-        tools:context=".RegistrationActivity">
-
-    <com.google.android.material.textfield.TextInputLayout
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtName"
-                android:hint="@string/enter_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <com.google.android.material.textfield.TextInputLayout
+            android:layout_height="match_parent">
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_margin="16dp"
+            tools:context=".RegistrationActivity">
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtPhone"
-                android:hint="@string/enter_mobile_number"
+        <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:inputType="number"
-                android:maxLength="10"
-                android:layout_marginTop="16dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtName"
+                    android:hint="@string/enter_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtPanCard"
-                android:hint="@string/enter_pan_card_number"
+
+        <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="16dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtPhone"
+                    android:hint="@string/enter_mobile_number"
+                    android:layout_width="match_parent"
+                    android:inputType="number"
+                    android:maxLength="10"
+                    android:layout_marginTop="16dp"
+                    android:layout_height="wrap_content"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtUID"
-                android:hint="@string/enter_uid_number"
+        <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="16dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtPanCard"
+                    android:hint="@string/enter_pan_card_number"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="16dp"
+                    android:layout_height="wrap_content"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtDob"
-                android:hint="@string/enter_dob_in_dd_mm_yyyy"
+        <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="16dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtUID"
+                    android:hint="@string/enter_uid_number"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="16dp"
+                    android:layout_height="wrap_content"/>
 
-    <TextView android:layout_width="match_parent"
-              android:text="@string/select_your_avatar"
-              android:textStyle="bold"
-              android:padding="7dp"
-              android:layout_marginTop="16dp"
-              android:layout_height="wrap_content"
-              android:id="@+id/lblSelect"
-              android:textSize="17sp"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <ImageView android:layout_width="150dp" android:src="@drawable/ic_person_black_24dp" android:layout_marginTop="16dp"
-               android:layout_height="150dp"
-               android:id="@+id/imgPhoto"/>
+        <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <Button android:layout_width="match_parent" android:layout_marginTop="16dp" android:id="@+id/btnRegister"
-            android:text="@string/register" android:layout_height="wrap_content"/>
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtDob"
+                    android:hint="@string/enter_dob_in_dd_mm_yyyy"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="16dp"
+                    android:layout_height="wrap_content"/>
 
-</LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView android:layout_width="match_parent"
+                  android:text="@string/select_your_avatar"
+                  android:textStyle="bold"
+                  android:padding="7dp"
+                  android:layout_marginTop="16dp"
+                  android:layout_height="wrap_content"
+                  android:id="@+id/lblSelect"
+                  android:textSize="17sp"/>
+
+        <ImageView android:layout_width="150dp" android:src="@drawable/ic_person_black_24dp"
+                   android:layout_marginTop="16dp"
+                   android:layout_height="150dp"
+                   android:id="@+id/imgPhoto"/>
+
+        <Button android:layout_width="match_parent" android:layout_marginBottom="64dp" android:layout_marginTop="16dp"
+                android:id="@+id/btnRegister"
+                android:text="@string/register" android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+</ScrollView>
